Added Tasks Added News page with services to get the news from the redmine API Added Mvvm view models

--- a/Redmine.Client.Ui/App.xaml
+++ b/Redmine.Client.Ui/App.xaml
@@ -1,8 +1,10 @@
-﻿<Application 
-    x:Class="Redmine.Client.Ui.App"
+﻿<Application
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"       
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" 
+    x:Class="Redmine.Client.Ui.App"
+    >
 
     <!--Application Resources-->
     <Application.Resources>
@@ -11,9 +13,9 @@
 
     <Application.ApplicationLifetimeObjects>
         <!--Required object that handles lifetime events for the application-->
-        <shell:PhoneApplicationService 
-            Launching="ApplicationLaunching" Closing="ApplicationClosing" 
-            Activated="ApplicationActivated" Deactivated="ApplicationDeactivated"/>
+    	<shell:PhoneApplicationService 
+    		Launching="ApplicationLaunching" Closing="ApplicationClosing" 
+    		Activated="ApplicationActivated" Deactivated="ApplicationDeactivated"/>
     </Application.ApplicationLifetimeObjects>
 
 </Application>
