--- a/Redmine.Client.Ui/Pages/Main.xaml
+++ b/Redmine.Client.Ui/Pages/Main.xaml
@@ -11,8 +11,8 @@
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     mc:Ignorable="d" 
     d:DesignWidth="480" 
-    d:DesignHeight="800"   
-    FontFamily="{StaticResource PhoneFontFamilyNormal}"
+    d:DesignHeight="800"
+	FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
@@ -40,7 +40,7 @@
     </toolkit:TransitionService.NavigationOutTransition>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot" Background="Transparent" >
         <!--Pivot Control-->
         <controls:Pivot Margin="0 0 0 5">
             <!--Pivot item two-->
@@ -80,10 +80,48 @@
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-
             </controls:PivotItem>
-            <controls:PivotItem Header="news">
-                
+            <controls:PivotItem Header="news" Margin="25 5 10 0" >
+                <ListBox ItemsSource="{Binding News}" >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Button phone7:TiltEffect.IsTiltEnabled="True" Margin="0,0,0,15" >
+                                <Button.Template>
+                                    <ControlTemplate>
+                                        <Grid>
+                                        	<Grid.RowDefinitions>
+                                        		<RowDefinition Height="Auto" />                             	
+												<RowDefinition Height="Auto" />                             	
+												<RowDefinition Height="Auto" />                             	
+											</Grid.RowDefinitions>
+                                            <TextBlock Grid.Row="0" 
+                                               Text="{Binding Title}"
+                                               TextWrapping="Wrap"
+											   HorizontalAlignment="Stretch"
+                                               Margin="0,5"
+                                               Foreground="{StaticResource PhoneForegroundBrush}"
+                                               FontSize="{StaticResource PhoneFontSizeMediumLarge}" 
+                                               FontFamily="{StaticResource PhoneFontFamilySemiLight}" VerticalAlignment="Center" />
+											<TextBlock Grid.Row="1"
+                                               Text="{Binding CreatedOn, StringFormat='\{0:MMMM dd, yyyy\}'}"                                               
+                                               Foreground="{StaticResource PhoneSubtleBrush}"
+                                               FontSize="{StaticResource PhoneFontSizeNormal}" 
+                                               FontFamily="{StaticResource PhoneFontFamilyNormal}" />
+											<TextBlock Grid.Row="2"
+                                               Text="{Binding Description}"
+                                               TextWrapping="Wrap"
+                                               MaxHeight="82"
+                                               Foreground="{StaticResource PhoneAccentBrush}"
+                                               FontSize="{StaticResource PhoneFontSizeNormal}" 
+                                               FontFamily="{StaticResource PhoneFontFamilySemiBold}"/>
+                                            
+                                        </Grid>
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </controls:PivotItem>
         </controls:Pivot>
 
@@ -97,14 +135,5 @@
         </phone7:BindableApplicationBar>
 
     </Grid>
-   
-    <!--<phone:PhoneApplicationPage.ApplicationBar >
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton 
-                Click="BindableApplicationBarIconButton_Click"
-                Text="settings" 
-                IconUri="/Images/appbar.feature.settings.rest.png" />
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>-->
 
 </phone:PhoneApplicationPage>
